--- a/package.json
+++ b/package.json
@@ -1,8 +1,29 @@
 {
+  "name": "jarvis-bot",
+  "version": "1.0.0",
+  "description": "discord bot",
+  "main": "bot.js",
+  "scripts": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/coltonPBrown/jarvis-bot.git"
+  },
+  "keywords": [
+    "discord",
+    "bot",
+    "javascript"
+  ],
+  "author": "coltonPBrown",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/coltonPBrown/jarvis-bot/issues"
+  },
+  "homepage": "https://github.com/coltonPBrown/jarvis-bot#readme",
   "dependencies": {
-    "discord.js": "^14.11.0",
-    "ffmpeg-static": "^5.1.0",
-    "fs": "^0.0.1-security",
-    "ytdl-core": "^4.11.4"
+    "@discordjs/voice": "^0.17.0",
+    "discord.js": "^14.15.3",
+    "ytdl-core": "^4.11.5"
   }
 }
